fix(LogoLink): fix edge case where hover state for logo persists on click on mobile,;

--- a/client/src/components/Header/Header.module.less
+++ b/client/src/components/Header/Header.module.less
@@ -53,15 +53,17 @@
     margin-left: 1.5rem;
     outline: none;
 
-    &:hover {
-      .Logo {
-        color: @color-red-100;
-        &:first-child {
-          transform: translateY(0.0875rem);
-        }
+    &.Hover {
+      &:hover {
+        .Logo {
+          color: @color-red-100;
+          &:first-child {
+            transform: translateY(0.0875rem);
+          }
 
-        &:last-child {
-          transform: translateY(-0.0875rem);
+          &:last-child {
+            transform: translateY(-0.0875rem);
+          }
         }
       }
     }
